[gd_scene load_steps=17 format=3 uid="uid://3th3a56n1xr0"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_1n3rx"]
[ext_resource type="Texture2D" uid="uid://d3hp68esrcte7" path="res://Metroidvania Assets/player/player.png" id="1_6oa8g"]
[ext_resource type="PackedScene" uid="uid://dcnssv2x1m3kg" path="res://Scenes/player_blaster.tscn" id="3_xpso2"]
[ext_resource type="PackedScene" uid="uid://r3ecbujqgo4p" path="res://Collisions/hurt_box.tscn" id="4_dvyr1"]
[ext_resource type="PackedScene" uid="uid://ceyir1iahs1uf" path="res://Scenes/camera_2d.tscn" id="4_va86y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lpjlh"]
size = Vector2(8, 15)

[sub_resource type="Animation" id="Animation_ul3wl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_47yki"]
resource_name = "idle"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_amivh"]
resource_name = "jump"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [11]
}

[sub_resource type="Animation" id="Animation_x7bqv"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 4]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"create_dust_effect"
}, {
"args": [],
"method": &"create_dust_effect"
}]
}

[sub_resource type="Animation" id="Animation_uyaxs"]
resource_name = "wall_slide"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v5kw4"]
_data = {
"RESET": SubResource("Animation_ul3wl"),
"idle": SubResource("Animation_47yki"),
"jump": SubResource("Animation_amivh"),
"run": SubResource("Animation_x7bqv"),
"wall_slide": SubResource("Animation_uyaxs")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rbvhg"]
size = Vector2(7, 15)

[sub_resource type="Animation" id="Animation_nv2y1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBlaster:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_nx3im"]
resource_name = "blink"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerBlaster:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false, true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_362h5"]
_data = {
"RESET": SubResource("Animation_nv2y1"),
"blink": SubResource("Animation_nx3im")
}

[node name="Player" type="CharacterBody2D"]
z_index = 10
collision_layer = 4
collision_mask = 3
floor_constant_speed = true
floor_snap_length = 2.0
script = ExtResource("1_1n3rx")
jump_height = 100.0
jump_time_to_peak = 0.6
jump_time_to_descent = 0.5

[node name="PlayerBlaster" parent="." instance=ExtResource("3_xpso2")]
show_behind_parent = true
position = Vector2(2, -9)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -12)
texture = ExtResource("1_6oa8g")
hframes = 12

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Sprite2D"]
position = Vector2(2, 3)
remote_path = NodePath("../../PlayerBlaster")
update_rotation = false
update_scale = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_lpjlh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v5kw4")
}

[node name="Camera2D" parent="." instance=ExtResource("4_va86y")]

[node name="Coyote_Jump_Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DropTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("4_dvyr1")]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.5, -7.5)
shape = SubResource("RectangleShape2D_rbvhg")
debug_color = Color(0.964954, 0, 0.489642, 0.42)

[node name="BlinkingAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_362h5")
}

[node name="WallSlideCD_Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="DropTimer" to="." method="_on_drop_timer_timeout"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
